chore(refactoring): Refactor the project
- check all methods and refactor
- add or remove unneccessary codes and bugs
- minimize long methods and similar code

[Finishes #167617112]
